# hello-rust

./: .envrc  Cargo.toml  flake.nix  log4rs.yaml
c/: Cargo.toml
ft/: Cargo.toml
ft/examples/: e1.rs  e2.rs  sleep.rs  wakeup.rs
l/: Cargo.toml
pinning/: Cargo.toml
pinning/examples/: e0.rs  e1.rs  e2.rs  e3.rs  e4.rs  e5.rs
pinning/src/: main.rs
py/: Cargo.toml
py/src/: lib.rs
r/: Cargo.toml
r/examples/: c.rs  s.rs
req/: .env  Cargo.toml
req/examples/: r.rs
sql/: Cargo.toml
sql/examples/: e2.rs  t.rs
ssh/: Cargo.toml
ssh/src/: main.rs
syn/: Cargo.toml
syn/examples/: fut.rs  g.rs  local-forward.rs  op.rs  pin_heap.rs  pin_stack.rs  ptr.rs  t.rs  tcp_server.rs  to.rs
t/: Cargo.toml
t/examples/: c.rs  mpmc.rs  mpsc.rs  t.rs
tpl/: Cargo.toml
tpl/examples/: conf.rs  conf.toml  env.rs  ntf.rs
ws/: Cargo.toml
ws/assets/: script.js
ws/src/: hub.rs  lib.rs
wt/: Cargo.toml
wt/src/: client.rs  server.rs
