[package]
name = "ft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
# mini-redis = "0.4"

# log = "*"
# env_logger = "*"

# bytes = "1"

# futures-util = "0.3.28"
# futures = { version = "0.3", features = ["thread-pool"] }
# futures-executor = "0.3"
# futures-timer = "3"

rand = "0.8"

# ssh2 = "0.9.4"
# tokio-ssh2 = { git = "https://github.com/tyan-boot/tokio-ssh2", branch="master" }
# openssh = { version = "0.9.9", features = ["native-mux"] }

anyhow = "1.0"

# tokio-tungstenite = "0.18.0"
wtransport = "0.1"

tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

# axum = "0.7.1"
base64 = "0.22"
# hyper = "1.0.1"
futures = "0.3"

clap = { version = "4.4", features = ["default", "derive"] }

# [[bin]]
# name = "s"
# path = "src/server.rs"
#
# [[bin]]
# name = "c"
# path = "src/client.rs"
#
# [[bin]]
# name = "f"
# path = "src/full.rs"
