[package]
name = "pinning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]]
# name = "c"

# [[bin]]
# name = "l"

[dependencies]
log = "*"
env_logger = "*"
chrono = "*"
log4rs = "1.2"
serde_yaml  = "*"
serde_json = "*"
dotenvy = "*"
config = "*"
anyhow = "*"

[dev-dependencies]
notify = "*"
thiserror = "*"
