[package]
name = "pinning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = "0.4"
pretty_env_logger = "0.5"
# log4rs = "1.2"

# tracing = { version = "0.1" }
# tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# console-subscriber = "0.3"

# chrono = "*"

# serde_yaml = "*"
# serde_json = "*"
# dotenvy = "*"
# config = "*"
# anyhow = "*"

[dev-dependencies]
notify = "*"
thiserror = "*"
