[package]
name = "req"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]]
# name = "c"

# [[bin]]
# name = "l"

[dependencies]
log = "*"
env_logger = "*"
chrono = "*"
log4rs = "1.2"
serde = "*"
serde_yaml  = "*"
serde_json = "*"
dotenvy = "*"
config = "*"
reqwest = {version = "*", features = ["json"]}
tokio = { version = "*", features = ["full"] }

clap = { version = "4.4.16", features = ["derive"] }

[dev-dependencies]
notify = "*"
