[package]
name = "sql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
# mini-redis = "0.4"

# log = "*"
# env_logger = "*"

# bytes = "1"

# futures-util = "0.3.28"
# futures = { version = "0.3", features = ["thread-pool"] }
# futures-executor = "0.3"
# futures-timer = "3"

rand = "0.8"

# ssh2 = "0.9.4"
# tokio-ssh2 = { git = "https://github.com/tyan-boot/tokio-ssh2", branch="master" }
# openssh = { version = "0.9.9", features = ["native-mux"] }

anyhow = "1.0"

# tokio-tungstenite = "0.18.0"
wtransport = "0.1"

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

axum = "0.7.1"
base64 = "0.21.0"
hyper = "1.0.1"

chrono = { version = "0.4.31", features = ["serde"] }
sqlx = { version = "*", features = ["runtime-tokio", "postgres", "chrono"] }

serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"

# [dependencies.sea-orm]
# version = "0.12.10"
# features = [
#     "runtime-tokio", "sqlx-postgres", "macros", "with-chrono", "with-time", "with-json", "with-uuid",
#     "postgres-array", "debug-print"
# ]
#
# log = "0.12"
