[package]
name = "w2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full", "rt", "sync", "macros"] }
# mini-redis = "0.4"

log = "0.4"
env_logger = "0.10"

# bytes = "1"

# futures-util = "0.3.28"
# futures = { version = "0.3", features = ["thread-pool"] }
# futures-executor = "0.3"
# futures-timer = "3"

rand = "0.8"

# ssh2 = "0.9.4"
# tokio-ssh2 = { git = "https://github.com/tyan-boot/tokio-ssh2", branch="master" }
# openssh = { version = "0.9.9", features = ["native-mux"] }

anyhow = "1.0"

# tokio-tungstenite = "0.18.0"
wtransport = "0.1"

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

base64 = "0.21.0"
hyper = "1.0.1"

axum = { version = "0.7.3", features = ["default", "ws"] }
axum-extra = { version = "0.9.1", features = ["typed-header"] }
# axum-ws-rooms = "0.6.0"

tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }

futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "0.4"
serde = { version = "1.0.196", features = ["derive"] }
